ui: replace PhantomJS with JSDom
JSDom is a lighter-weight replacement for PhantomJS. It's missing a lot
of the features of PhantomJS, as it's just a virtual DOM without any of
the other headless browser features, but it doesn't seem like we need
those features.

JSDom is much faster at running our tests as well and doesn't seem to
crash ツ

--- a/pkg/ui/Makefile
+++ b/pkg/ui/Makefile
@@ -72,7 +72,7 @@ lint: yarn.installed typings.installed
 
 .PHONY: test
 test: yarn.installed typings.installed jspm.installed
-	../../scripts/travis_retry.sh karma start
+	karma start
 
 test-debug: yarn.installed typings.installed jspm.installed
 	karma start --browsers Chrome --no-single-run --reporters mocha
