--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
     "chokidar-socket-emitter": "^0.5.4",
+    "jsdom": "^9.12.0",
     "jspm": "jspm/jspm-cli",
-    "karma": "^1.1.2",
+    "karma": "^1.5.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-jsdom-launcher": "^6.0.0",
     "karma-jspm": "^2.1.1",
     "karma-mocha": "^1.0.1",
     "karma-mocha-reporter": "^2.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
     "mocha": "^3.0.2",
     "nib": "^1.1.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "stylint": "^1.3.10",
     "stylus": "^0.54.5",
     "tslint": "^4.3.1",
