vendor: update grpc-go and update non-pinned deps
Switch from Peter's fork of grpc to my own fork, since Peter's out of
office. My fork is https://github.com/grpc/grpc-go head + Peter's one
commit increasing the per-stream flow-control window.

The motivation of syncing to newer gRPC is to include grpc/grpc-go#993
for helping with #13989 - we will move to gRPC internal heartbeats
instead of using our own connection heartbeats in a future cockroach
commit.

Other dep updates:
- the Lightstep update is a single commit that seems innocuous

--- a/glide.yaml
+++ b/glide.yaml
@@ -15,8 +15,8 @@ import:
 # https://github.com/grpc/grpc-go/issues/760
 # https://github.com/grpc/grpc-go/issues/1043
 - package: google.golang.org/grpc
-  version: d3f1ab4a4dca70781cf6dc850a79ed38632660a6
-  repo: https://github.com/petermattis/grpc-go
+  version: 9d55a95b90eb10d08a07e0213d23797dbd7b7552
+  repo: https://github.com/andreimatei/grpc-go
 # Pins to prevent unintended version changes to libs we care about when adding/
 # removing/changing other deps. These are grouped separately to make it easier
 # to comment them out in bulk when running an across-the-board dep update.
