--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -51,13 +51,14 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-sinon": "^1.0.5",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.3",
     "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "moment": "^2.18.1",
     "nib": "^1.1.2",
     "nvd3": "^1.8.5",
-    "protobufjs": "<6.0.0",
+    "protobufjs": "dcodeIO/protobuf.js",
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
@@ -82,6 +83,7 @@
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.1",
-    "webpack-dev-middleware": "^1.10.1"
+    "webpack-dev-middleware": "^1.10.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
