--- a/pkg/ui/tsconfig.json
+++ b/pkg/ui/tsconfig.json
@@ -3,11 +3,10 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "jsx": "preserve",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
     "noImplicitAny": true,
     "noImplicitReturns": false,
     "noImplicitThis": false,
