build,ui: add support for protobuf WKTs
- Address warnings in server/status/status.proto

Closes #6616

--- a/pkg/ui/tsconfig.json
+++ b/pkg/ui/tsconfig.json
@@ -3,7 +3,7 @@
     "allowSyntheticDefaultImports": true,
     "alwaysStrict": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "jsx": "preserve",
     "moduleResolution": "node",
     "noFallthroughCasesInSwitch": true,
