--- a/glide.yaml
+++ b/glide.yaml
@@ -17,6 +17,10 @@ import:
 - package: google.golang.org/grpc
   version: 9d55a95b90eb10d08a07e0213d23797dbd7b7552
   repo: https://github.com/andreimatei/grpc-go
+# We pin glide itself to prevent changes to glide's dependency resolution
+# algorithm from modifying our dependencies unexpectedly.
+- package: github.com/Masterminds/glide
+  version: ab0972eb70bbb48926b62b3401b19845b186c3c0
 # Pins to prevent unintended version changes to libs we care about when adding/
 # removing/changing other deps. These are grouped separately to make it easier
 # to comment them out in bulk when running an across-the-board dep update.
