ui/Makefile: depend on correct yarn.installed target
Make considers targets that are textually different to name different
files. This means paths that resolve to the same file, like
yarn.installed and ../../pkg/ui/yarn.installed when the CWD is pkg/ui,
are considered different targets. The UI Makefile is currently unable to
automatically install Yarn dependencies because it spells yarn.installed
differently than build/common.mk.

This commit introduces a variable, YARN_INSTALLED_TARGET, and uses it
consistently across our Makefiles. This fixes the problem and should
make it harder to spell the name of yarn.installed wrong in the future.

--- a/pkg/ui/Makefile
+++ b/pkg/ui/Makefile
@@ -33,19 +33,19 @@ protos:
 generate: $(GOBINDATA_TARGET)
 
 .PHONY: lint
-lint: yarn.installed
+lint: $(YARN_INSTALLED_TARGET)
 	stylint -c .stylintrc styl
 	tslint -c tslint.json $(shell find src -name '*.tsx' -or -name '*.ts' -not -path 'src/js/*')
 
 .PHONY: test
-test: yarn.installed protos
+test: $(YARN_INSTALLED_TARGET) protos
 	karma start
 
 .PHONY: test-debug
-test-debug: yarn.installed protos
+test-debug: $(YARN_INSTALLED_TARGET) protos
 	karma start --browsers Chrome --no-single-run --reporters mocha
 
-$(GOBINDATA_TARGET): yarn.installed protos
+$(GOBINDATA_TARGET): $(YARN_INSTALLED_TARGET) protos
 	rm -rf dist
 	webpack -p
 	go-bindata -nometadata -pkg ui -o $@ -prefix dist dist
