*: switch most uses of "syscall" to golang.org/x/sys
Use of "syscall" is strongly discouraged. The package doc reads:

  NOTE: This package is locked down. Code outside the standard
  Go repository should be migrated to use the corresponding
  package in the golang.org/x/sys repository. That is also where updates
  required by new systems or versions should be applied.
  See https://golang.org/s/go1.4-syscall for more information.

This also makes a few improvements along the way:
- unix.Dup2 is correctly shimmed to unix.Dup3 [0]
- windows.GetSystemTimePreciseAsFileTime is a thing [1]

[0] https://github.com/golang/sys/blob/39e3dc2/unix/syscall_linux_arm64.go#L152:L154
[1] https://github.com/golang/sys/commit/39e3dc2

--- a/glide.yaml
+++ b/glide.yaml
@@ -56,3 +56,5 @@ import:
   version: 728b753d0135da6801d45a38e6f43ff55779c5c2
 - package: golang.org/x/net
   version: a6577fac2d73be281a500b310739095313165611
+- package: golang.org/x/sys
+  version: 39e3dc274464e7d2f663aa606a830611bae5f1db
