build: create a Make target for `go generate`
PR #14629 adjusted our Makefile to install tools into REPO_ROOT/bin
instead of GOBIN. This change appears to have broken builds on fresh
TeamCity agents. Because `go generate` was previously invoked outside
the Makefile, `go generate` ran with a PATH that did not include
REPO_ROOT/bin.

This commit adds a `generate` target to the Makefile that ensures `go
generate` is run with the correct PATH. It has the added benefit of
symmetry with the other Make targets that shadow Go tools, like `make
build`, `make install`, and `make test`.

This commit additionally adjusts `make check` and `make generate` to
depend on `gotestdashi`; there was previously an implicit dependency
here that could lead to hard-to-track-down failures. (See the comment
that was moved from teamcity-check.sh to the Makefile for details.)

--- a/pkg/ui/Makefile
+++ b/pkg/ui/Makefile
@@ -27,8 +27,8 @@ all: lint test $(GOBINDATA_TARGET)
 protos:
 	$(MAKE) -C $(ORG_ROOT) -f cockroach/build/protobuf.mk
 
-# Running `go generate` will call this target. Update this if you add new
-# generated files.
+# Running `make generate` from the root will call this target via `go generate`.
+# Update this if you add new generated files.
 .PHONY: generate
 generate: $(GOBINDATA_TARGET)
 
