sql/parser: use vendored yacc, not $GOPATH/bin/yacc
This is likely the cause of the `make check` failures in sql.y.

Fixes #14685.

--- a/pkg/sql/parser/Makefile
+++ b/pkg/sql/parser/Makefile
@@ -1,3 +1,6 @@
+# Trigger these rules by running `make generate PKG=./pkg/sql/parser` from the
+# repository root to ensure your PATH includes vendored binaries.
+
 all: sql.go keywords.go reserved_keywords.go
 
 .PHONY: sql.go
