--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 
 artifacts
 /bin
-.bootstrap
+/bin.*
 .buildinfo
 /cockroach
 /cockroach-data
@@ -23,6 +23,11 @@ artifacts
 *.test*
 # Various `sed -i~` invocations in our scripts.
 *~
+
+# TODO(benesch): the .bootstrap file has moved into the bin directory; remove
+# this entry once it's unlikely developers have branches that straddle this
+# change (a few weeks after 4/7/2017).
+.bootstrap
 
 # Custom or private env vars (e.g. internal keys, access tokens, etc).
 customenv.mk
