build: minimize cgo's role in the build
This commit excises cgo role in building our dependencies, limiting it
to the link phase only. The c-protobuf, c-jemalloc, c-snappy, and
c-rocksdb packages are removed in favor of Make rules that use these
packages' native build systems. This has a few implications:

  1. We no longer need to maintain platform-specific headers for each
     platform we support; we can rely on our dependency's build systems
     to do feature detection as necessary.

  2. Windows needs no special treatment.

  3. We no longer require the parallel cgo patch for fast compliation
     of C/C++ dependencies; we do, however, need to update the docs and
     train our engineers to run `make -jNCPUS` instead. Make unfortunately
     provides no way to set a parallelization default.

  4. We, unfortunately, now have a build dependency on CMake. We could
     instead vendor CMake itself, but building CMake from source takes
     about five minutes on my machine and will have serious implications
     for CI times. Binary distributions of CMake are readily available,
     and the specific version of CMake used is not particularly
     critical, as it is with the other C dependencies we vendor.

  5. We're no longer compatible with `go get` or `go build`; you *must*
     compile through the Makefile.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "vendor"]
 	path = vendor
 	url = https://github.com/cockroachdb/vendored
+[submodule "c-deps"]
+	path = c-deps
+	url = https://github.com/cockroachdb/c-deps.git
