--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -20,11 +20,11 @@
     "@types/react-paginate": "<3.0.0",
     "@types/react-redux": "^4.4.38",
     "@types/react-router": "<4.0.0",
-    "@types/react-router-redux": "^4.0.43",
+    "@types/react-router-redux": "<5.0.0",
     "@types/react-select": "^1.0.45",
     "@types/react-sticky": "^5.0.1",
     "@types/redux-thunk": "^2.1.0",
-    "@types/sinon": "^1.16.36",
+    "@types/sinon": "^2.1.2",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
@@ -32,13 +32,13 @@
     "bytebuffer": "^5.0.1",
     "chai": "^3.5.0",
     "classnames": "^2.2.5",
-    "css-loader": "^0.27.3",
+    "css-loader": "^0.28.0",
     "d3": "<4.0.0",
     "enzyme": "^2.7.1",
     "express": "^4.15.2",
     "favicons-webpack-plugin": "^0.0.7",
     "fetch-mock": "^5.9.4",
-    "file-loader": "^0.10.1",
+    "file-loader": "^0.11.1",
     "highlight.js": "^9.10.0",
     "html-webpack-plugin": "^2.28.0",
     "html-webpack-template": "^6.0.1",
@@ -58,7 +58,7 @@
     "moment": "^2.18.1",
     "nib": "^1.1.2",
     "nvd3": "^1.8.5",
-    "protobufjs": "dcodeIO/protobuf.js",
+    "protobufjs": "^6.7.3",
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
@@ -66,12 +66,12 @@
     "react-paginate": "<3.0.0",
     "react-redux": "^5.0.3",
     "react-router": "<4.0.0",
-    "react-router-redux": "^4.0.8",
+    "react-router-redux": "<5.0.0",
     "react-select": "^1.0.0-rc.3",
     "react-sticky": "^5.0.5",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
-    "reselect": "^2.5.4",
+    "reselect": "^3.0.0",
     "sinon": "^2.1.0",
     "source-map-loader": "^0.2.0",
     "style-loader": "^0.16.0",
@@ -79,7 +79,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "ts-loader": "^2.0.3",
-    "tslint": "^4.5.1",
+    "tslint": "^5.1.0",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.1",
