.gitignore: ignore builds.xml
This file sometimes gets created by TeamCity. Easiest to just .gitignore
it to prevent a dirty work dir when building a release.

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 artifacts
 /bin
 /bin.*
+# TeamCity sometimes creates this file during builds.
+builds.xml
 .buildinfo
 /cockroach
 /cockroach-data
