vendor: bump crlfmt
Changes in glide.lock since HEAD~
https://github.com/cockroachdb/crlfmt/compare/64263ede...ec6cff36
https://github.com/mattn/goveralls/compare/a99c5ee0...42c8a693
https://github.com/spf13/pflag/compare/e453343e...9e4c2105
https://github.com/golang/tools/compare/cbb995d0...66326985
https://github.com/dominikh/go-tools/compare/6c3814a1...42d503dc

--- a/glide.yaml
+++ b/glide.yaml
@@ -24,6 +24,8 @@ import:
 # Pins to prevent unintended version changes to libs we care about when adding/
 # removing/changing other deps. These are grouped separately to make it easier
 # to comment them out in bulk when running an across-the-board dep update.
+- package: cloud.google.com/go
+  version: ed63fb27efcf32e25fe7837e4662457d3da4c4f2
 - package: github.com/cockroachdb/apd
   version: 4c0c15263a45c631e8f0310f0acbc1e89c722ac2
 - package: github.com/cockroachdb/c-jemalloc
