glide.lock: update dependencies
- sqlccl: remove azure account name validation (fixed upstream)
- metacheck:
   - style_test.go:770: internal/rsg/yacc/parse.go:100:2: redundant return statement (S1027)
   - style_test.go:770: sql/distsqlrun/input_sync.go:244:2: redundant return statement (S1027)
   - style_test.go:770: storage/entry_cache.go:166:2: redundant return statement (S1027)

--- a/glide.yaml
+++ b/glide.yaml
@@ -17,6 +17,11 @@ import:
 - package: google.golang.org/grpc
   version: ded79a3531af2dd320eed5b2fd138f23fb2e3f59
   repo: https://github.com/andreimatei/grpc-go
+# https://github.com/lightstep/lightstep-tracer-go/pull/73 removed support for
+# basictracer.Delegator. Revisit when
+# https://github.com/cockroachdb/cockroach/issues/9806 is fixed.
+- package: github.com/lightstep/lightstep-tracer-go
+  version: 45076de666938f451972e097cc450db32882dfec
 # We pin glide itself to prevent changes to glide's dependency resolution
 # algorithm from modifying our dependencies unexpectedly.
 - package: github.com/Masterminds/glide
