acceptance: avoid relying on GOPATH
In particular, avoid relying on the host knowing where the container's
$GOPATH/bin is going to end up. Instead, rely on the cwd, which is
always consistent when running acceptance tests.

Also converge TC and the local acceptance runner to avoid similar
shenanigans in the future.

--- a/.gitignore
+++ b/.gitignore
@@ -17,8 +17,8 @@ artifacts
 # TeamCity sometimes creates this file during builds.
 builds.xml
 .buildinfo
-/cockroach
-/cockroach-data
+# cockroach-data, cockroach{,.race}-{darwin,linux,windows}-*
+/cockroach*
 /certs
 # make stress, acceptance produce stress.test, acceptance.test
 *.test*
