--- a/pkg/sql/parser/Makefile
+++ b/pkg/sql/parser/Makefile
@@ -1,16 +1,11 @@
 # Trigger these rules by running `make generate PKG=./pkg/sql/parser` from the
 # repository root to ensure your PATH includes vendored binaries.
 
-all: sql.go keywords.go reserved_keywords.go
+all: sql.go keywords.go
 
 .PHONY: sql.go
 sql.go: sql.y
 	@./sql_union.sh
-
-.PHONY: reserved_keywords.go
-reserved_keywords.go: sql.y reserved_keywords.awk
-	awk -f reserved_keywords.awk < sql.y > reserved_keywords.go
-	gofmt -s -w reserved_keywords.go
 
 .PHONY: keywords.go
 keywords.go: sql.y all_keywords.awk
