ui: create physical query plan inspector admin view
Provides a physical query plan inspector at /queryplan in the admin
interface, moving @RaduBerinde's cockroachdb.github.io code into the core
codebase. Committed with love for my roommate @benesch, since he's been
professing the Cockroach bible to me pretty much daily.

Address #12651.

--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -8,7 +8,11 @@
     "@types/bytebuffer": "^5.0.33",
     "@types/chai": "^3.4.35",
     "@types/classnames": "^0.0.32",
+    "@types/combokeys": "^2.4.5",
     "@types/d3": "<4.0.0",
+    "@types/d3-dispatch": "^1.0.4",
+    "@types/d3-drag": "^1.1.0",
+    "@types/d3-timer": "^1.0.5",
     "@types/enzyme": "^2.7.6",
     "@types/fetch-mock": "^5.8.1",
     "@types/highlight.js": "^9.1.9",
@@ -16,6 +20,7 @@
     "@types/mocha": "^2.2.40",
     "@types/nvd3": "^1.8.36",
     "@types/react": "^15.0.18",
+    "@types/react-codemirror": "^0.2.6",
     "@types/react-dom": "^0.14.23",
     "@types/react-paginate": "<3.0.0",
     "@types/react-redux": "^4.4.38",
@@ -25,6 +30,7 @@
     "@types/react-sticky": "^5.0.1",
     "@types/redux-thunk": "^2.1.0",
     "@types/sinon": "^2.1.2",
+    "@types/webcola": "^3.2.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.2.2",
@@ -32,6 +38,8 @@
     "bytebuffer": "^5.0.1",
     "chai": "^3.5.0",
     "classnames": "^2.2.5",
+    "codemirror": "^5.25.2",
+    "combokeys": "^2.4.6",
     "css-loader": "^0.28.0",
     "d3": "<4.0.0",
     "enzyme": "^2.7.1",
@@ -62,6 +70,7 @@
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
+    "react-codemirror": "^1.0.0",
     "react-dom": "^15.4.2",
     "react-paginate": "<3.0.0",
     "react-redux": "^5.0.3",
@@ -83,6 +92,7 @@
     "tslint": "^5.1.0",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
+    "webcola": "3.3.5",
     "webpack": "^2.3.1",
     "webpack-dev-middleware": "^1.10.1",
     "whatwg-fetch": "^2.0.3"
