vendor: update non-pinned deps
Pinned github.com/Azure/azure-sdk-for-go as the API has changed. Someone
familiar with the code will have to fix our usage.

https://github.com/Masterminds/semver/compare/3f0ab6d4...abff1900
https://github.com/Microsoft/go-winio/compare/f3b19139...d311c76e
https://github.com/Sirupsen/logrus/compare/10f801eb...5e5dc898
https://github.com/aws/aws-sdk-go/compare/80dd7125...fed27f4b
https://github.com/cpuguy83/go-md2man/compare/a65d4d2d...bcc0a711
https://github.com/docker/distribution/compare/1d782470...83f857ca
https://github.com/elastic/gosigar/compare/653b7f4a...6c665a62
https://github.com/google/go-github/compare/e8d46665...4b7b4456
https://github.com/google/pprof/compare/1047541c...c0fb62ec
https://github.com/mattn/goveralls/compare/42c8a693...a2cbbd7c
https://github.com/mitchellh/reflectwalk/compare/417edcfd...8d802ff4
https://github.com/opencontainers/go-digest/compare/aa2ec055...eaa60544
https://github.com/opentracing/opentracing-go/compare/1949ddbf...eaaf4e1e
https://github.com/petermattis/goid/compare/caab6446...0ded8588
https://github.com/pkg/errors/compare/ff09b135...c605e284
https://github.com/russross/blackfriday/compare/b253417e...0ba0f2b6
https://github.com/spf13/pflag/compare/f1d95a35...e57e3eeb
https://github.com/golang/oauth2/compare/a6bd8cef...ad516a29
https://github.com/golang/perf/compare/b74b4574...844f0140
https://github.com/golang/sync/compare/de49d9dc...57af7366
https://github.com/golang/tools/compare/2382e399...bf4b54dc
https://github.com/google/google-api-go-client/compare/fbbaff18...1377dd16
https://github.com/dominikh/go-tools/compare/f637af82...aeda00f7

--- a/glide.yaml
+++ b/glide.yaml
@@ -36,6 +36,10 @@ import:
 - package: golang.org/x/text
   version: 470f45bf29f4147d6fbd7dfd0a02a848e49f5bf4
 
+# TODO(dt,mjibson): API changed
+- package: github.com/Azure/azure-sdk-for-go
+  version: 8dd1f3ff407c300cff0a4bfedd969111ca5a7903
+
 # Pins to prevent unintended version changes to libs we care about when adding/
 # removing/changing other deps. These are grouped separately to make it easier
 # to comment them out in bulk when running an across-the-board dep update.
