ui: Reduce WebPack / Warning Spew during builds
Commit makes a few changes to reduce the significant output spew from
our frontend build processes.

Fixes all React 0.15 deprecation warnings, related to usage of certain
React features which had been moved to new packages:

+ Updated several third-party react-related packages.
+ Install 'prop-types' and 'react-test-renderer' packages as
dependencies.
+ Fix all usages of `React.PropTypes` in Admin UI code.
+ Change all imports of style `import * as React from 'react'` to
`import React from 'react'`. This is necessary to prevent the
"PropTypes" deprecation message.

New settings added for build tools:

+ Begins using Webpack's 'stats' configuration value to reduce the
non-error output from webpack. The output that remains is also now
colorized, Improving readability.
+ Use the "noinfo" setting for Karma's webpackMiddleware plugin,
completely suppressing informational webpack messages while running
tests.

Makefile changes:

+ Changes "test-debug" to "test-watch". This target runs karma in a
persistent session which watches for filesystem changes and re-runs
tests whenever anything changes. This target no longer uses the Chrome
browser; the "test-debug" target was originally created because
Phantomjs was not outputting sufficient information for test failures,
but that is no longer an issue with jsdom.

--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -19,6 +19,7 @@
     "@types/lodash": "^4.14.56",
     "@types/mocha": "^2.2.40",
     "@types/nvd3": "^1.8.36",
+    "@types/prop-types": "^15.5.1",
     "@types/react": "^15.0.18",
     "@types/react-codemirror": "^0.2.6",
     "@types/react-dom": "^0.14.23",
@@ -42,7 +43,7 @@
     "combokeys": "^2.4.6",
     "css-loader": "^0.28.0",
     "d3": "<4.0.0",
-    "enzyme": "^2.7.1",
+    "enzyme": "^2.8.2",
     "express": "^4.15.2",
     "favicons-webpack-plugin": "^0.0.7",
     "fetch-mock": "^5.9.4",
@@ -66,18 +67,20 @@
     "moment": "^2.18.1",
     "nib": "^1.1.2",
     "nvd3": "^1.8.5",
+    "prop-types": "^15.5.10",
     "protobufjs": "^6.7.3",
     "react": "^15.4.2",
     "react-addons-create-fragment": "^15.4.2",
     "react-addons-test-utils": "^15.4.2",
     "react-codemirror": "^1.0.0",
     "react-dom": "^15.4.2",
-    "react-paginate": "<3.0.0",
+    "react-paginate": "^4.4.2",
     "react-redux": "^5.0.3",
     "react-router": "<4.0.0",
     "react-router-redux": "<5.0.0",
-    "react-select": "^1.0.0-rc.3",
+    "react-select": "^1.0.0-rc.4",
     "react-sticky": "^5.0.5",
+    "react-test-renderer": "^15.5.4",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.0",
