ui: Use BaseURL to reduce relative imports
This commit uses typescript's `baseUrl` setting, in combination with
webpack's `resolver` settings, in order to eliminate cross-directory
relative imports (i.e. uses of "../").

In this configuration, typescript and webpack look for non-relative
imports in two locations: the top level '/ui' directory and the
'/node_modules' sub-directory, in that order.  This allows all
cross-folder imports within the cockroach code to be expressed with
non-relative notation, which will make upcoming code refactoring much
easier.

Relative imports are still used to reference files in the same folder
(i.e. using "./" with a single dot).

--- a/pkg/ui/tsconfig.json
+++ b/pkg/ui/tsconfig.json
@@ -15,6 +15,13 @@
     "outDir": "./dist/",
     "sourceMap": true,
     "strictNullChecks": false,
-    "target": "es6"
+    "target": "es6",
+    "baseUrl": ".",
+    "paths": {
+      "*": [
+        "*",
+        "node_modules/*"
+      ]
+    }
   }
 }
