Use COPY for files and folders

--- a/cloud/kubernetes/init/Dockerfile
+++ b/cloud/kubernetes/init/Dockerfile
@@ -1,6 +1,6 @@
 FROM gcr.io/google_containers/peer-finder:0.2
 
-ADD on-start.sh /
+COPY on-start.sh /
 RUN chmod -c 755 /on-start.sh
 
 ENTRYPOINT ["/peer-finder"]
