Specify a maintainer of the Dockerfile

--- a/cloud/kubernetes/init/Dockerfile
+++ b/cloud/kubernetes/init/Dockerfile
@@ -1,5 +1,7 @@
 FROM gcr.io/google_containers/peer-finder:0.2
 
+MAINTAINER Alex Robinson <alexdwanerobinson@gmail.com>
+
 COPY on-start.sh /
 RUN chmod -c 755 /on-start.sh
 
