--- a/cloud/kubernetes/cockroachdb-statefulset.yaml
+++ b/cloud/kubernetes/cockroachdb-statefulset.yaml
@@ -104,10 +104,13 @@ spec:
         # has to decide what command-line flags to use when starting CockroachDB.
         # This only matters when a pod's persistent volume is empty - if it has
         # data from a previous execution, that data will always be used.
+        #
+        # If your Kubernetes cluster uses a custom DNS domain, you will have
+        # to add an additional arg to this pod: "-domain=<your-custom-domain>"
         pod.alpha.kubernetes.io/init-containers: '[
             {
                 "name": "bootstrap",
-                "image": "cockroachdb/cockroach-k8s-init:0.1",
+                "image": "cockroachdb/cockroach-k8s-init:0.2",
                 "imagePullPolicy": "IfNotPresent",
                 "args": [
                   "-on-start=/on-start.sh",
