--- a/cloud/kubernetes/cockroachdb-statefulset.yaml
+++ b/cloud/kubernetes/cockroachdb-statefulset.yaml
@@ -105,7 +105,7 @@ spec:
               fieldPath: metadata.namespace
         volumeMounts:
         - name: datadir
-          mountPath: "/cockroach/cockroach-data"
+          mountPath: /cockroach/cockroach-data
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
