Address review comments

--- a/cloud/kubernetes/example_app_secure.yaml
+++ b/cloud/kubernetes/example_app_secure.yaml
@@ -23,7 +23,7 @@ spec:
       # the cluster CA to the certs directory.
       - name: init-certs
         image: cockroachdb/cockroach-k8s-request-cert:0.1
-        imagePullPolicy: Always
+        imagePullPolicy: IfNotPresent
         args:
         - "-certs-dir=/cockroach-certs"
         - "-type=client"
