--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ artifacts
 # make stress, acceptance produce stress.test, acceptance.test
 *.test*
 
+.idea/
+
 # Custom or private env vars (e.g. internal keys, access tokens, etc).
 customenv.mk
 
